--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "devchat",
   "version": "1.0.0",
   "description": "Project management for developers and clients",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
