--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "crypto": "^1.0.1",
     "ejs": "^2.5.9",
@@ -29,6 +30,8 @@
     "helmet": "^3.12.0",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.16",
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.17.3",
+    "url": "^0.11.0",
+    "ws": "^5.1.1"
   }
 }
